tests/macros/raw_select/mask.stderr
error: option `mask` does not exist for kind `raw_select`
 --> $DIR/mask.rs:2:47
  |
2 |     let q = discourse::questions![RawSelect { mask: todo!() }];
  |                                               ^^^^
