tests/macros/raw_select/mask.rs
fn main() {
    let q = discourse::questions![RawSelect { mask: todo!() }];
}
